--- a/MyApplication3/app/src/main/res/values/strings.xml
+++ b/MyApplication3/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="boolean_value">Boolean Value</string>
     <string name="ex_1294">ex: 1294</string>
     <string name="game_title">CRESCENDO</string>
+    <string name="Yes">Yes</string>
+    <string name="working_auto">Does robot have working auto?</string>
+    <string name="No">No</string>
 </resources>
