added page 2 for auto mode, changed the way you access fragments to represent how the match will go.

--- a/MyApplication3/app/src/main/res/values/strings.xml
+++ b/MyApplication3/app/src/main/res/values/strings.xml
@@ -54,4 +54,14 @@
     <string name="Yes">Yes</string>
     <string name="working_auto">Does robot have working auto?</string>
     <string name="No">No</string>
+    <string name="ten">10\n</string>
+    <string name="toast">Toast\n</string>
+    <string name="Toast">Toast</string>
+    <string name="Count">Count</string>
+    <string name="Random">Random</string>
+    <string name="toAuto">Auto segment</string>
+    <string name="Teleop">Teleop\n</string>
+    <string name="moveOut">Did the robot move out of their zone?</string>
+    <string name="scoreAuto">Did the robot score during auto?</string>
+    <string name="numNotes">If so how many?</string>
 </resources>
