--- a/MyApplication3/app/src/main/res/values/strings.xml
+++ b/MyApplication3/app/src/main/res/values/strings.xml
@@ -51,4 +51,17 @@
     <string name="boolean_value">Boolean Value</string>
     <string name="ex_1294">ex: 1294</string>
     <string name="game_title">CRESCENDO</string>
+    <string name="Yes">Yes</string>
+    <string name="working_auto">Does robot have working auto?</string>
+    <string name="No">No</string>
+    <string name="ten">10\n</string>
+    <string name="toast">Toast\n</string>
+    <string name="Toast">Toast</string>
+    <string name="Count">Count</string>
+    <string name="Random">Random</string>
+    <string name="toAuto">Auto segment</string>
+    <string name="Teleop">Teleop\n</string>
+    <string name="moveOut">Did the robot move out of their zone?</string>
+    <string name="scoreAuto">Did the robot score during auto?</string>
+    <string name="numNotes">If so how many?</string>
 </resources>
