--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="second_fragment_label">Teleop</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="no_change">NoChange</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
